@@ -1,5 +1,8 @@
 2000-11-27  John Harper  <jsh@eazel.com>
 
+	* sawfish/wm/ext/match-window.jl: added `maximized' pseudo
+	property. Fixes #4808
+
 	* sawfish/wm/util/display-wininfo.jl: new module, exports a
 	single function to display a message with some user-relevant
 	details of the window (currently icon and name)
